# rustfmt-lsp-server

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.dev/readme/: readme.py
.github/workflows/: release.yml
.zed/: settings.json
src/: main.rs
